2003-07-23  Dan Winship  <danw@ximian.com>

	* e-summary-factory.c (e_summary_factory_new_control): Fix a
	warning.

	* e-summary-rdf.c (tree_walk): Fix a warning

	* e-summary-weather.c (e_summary_weather_get_html): Remove an
	unused variable.
	(weather_make_html): Likewise.

2003-06-23  Dan Winship  <danw@ximian.com>

	* e-summary-calendar.c (setup_gconf_client): Don't call
	setup_calendar from here, since e_summary_calendar_init will call
	it immediately after setup_gconf_client, which will result in a
	calendar being quickly created and destroyed.

2003-06-19  Ettore Perazzoli  <ettore@ximian.com>

	* e-summary.c (do_summary_print): Do not destroy preview_widget
	when returning from gtk_dialog_run() since it's unset at that
	point.  [#44798]

2003-06-13  Larry Ewing  <lewing@ximian.com>

	* e-summary.c (e_summary_url_requested): free the filename.

2003-06-05  Not Zed  <NotZed@Ximian.com>

	** For #42691.

	* Makefile.am (%.server.in): use implicit rule.
	(BUILT_SOURCES): added server_DATA

2003-06-09  Ettore Perazzoli  <ettore@ximian.com>

	* e-summary-mail.c (e_summary_mail_get_info): Protect against
	folder_store being NULL.  [#44111]
